@@ -1,3 +1,7 @@
+2020-07-11  Wang Kai  <kaiwkx@gmail.com>
+
+	* leetcode.el: remove dash.el dependency.
+
 2020-05-31  Wang Kai  <kaiwkx@gmail.com>
 
 	* leetcode.el: Cleans LeetCode cookies in `url-cookie-file' before
